[package]
name = "graph-drawing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8.5"
svg = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "kk"
harness = false

[lib]
bench = false

[[bin]]
name = "graph-drawing"
bench = false

[profile.release]
debug = 1
